--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -274,6 +274,8 @@ to work on, or be quick and effective works that wont impact train services on a
 replace some locomotive hauled services, during testing periods, coaches will replace trains, all testing will be conducted during weekend nights to create less impact to services.</p>
 
 <h1>Works Overview</h1>
+
+<div>
 <p class="nsw-small"><i>Please note: All night time works (from 8:30PM until last train) are indicated by the</i> ⏾ <i>symbol</i></p>
 <h3>Archerton, Droylsden & Wytcombe Lines</h3>
 <div class="nsw-table nsw-table--striped" tabindex="0">
@@ -321,6 +323,157 @@ replace some locomotive hauled services, during testing periods, coaches will re
       </tr>                
     </tbody>
   </table>
+</div>
+</div>
+
+<div>
+<h3>Flinders Bay & Broadshore Lines</h3>
+<div class="nsw-table nsw-table--striped" tabindex="0">
+  <table>
+    <thead>
+      <tr>
+        <th width="20%">Affected areas</th>
+        <th width="20%">Dates</th>
+        <th width="60%">Works being done</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <b>St. Neots - Broadshore</b>
+        </td>
+        <td>
+          <p>02/01/2026 - 05/01/2026 ⏾</p>
+        </td>
+        <td>
+          <p>Track duplication, signalling upgrades and testing</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Tallentyne (swap from Suburban services) - Bodmin</b>
+        </td>
+        <td>
+          <p>10/11/2025 - 24/11/2025</p>
+        </td>
+        <td>
+          <p>Level crossing removal, trackworks and signalling upgrades</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Bodmin - Flinders Bay (Broadshore services to terminate at Coleford during works)</b>
+        </td>
+        <td>
+          <p>15/12/2025 - 05/01/2026 ⏾</p>
+        </td>
+        <td>
+          <p>Trackworks, bridge maintenance, signalling upgrades, station accessability improvements and track duplication</p>
+        </td>
+      </tr>                
+    </tbody>
+  </table>
+</div>
+</div>
+
+<div>
+<h3>Harold Point & Ashford Lines</h3>
+<div class="nsw-table nsw-table--striped" tabindex="0">
+  <table>
+    <thead>
+      <tr>
+        <th width="20%">Affected areas</th>
+        <th width="20%">Dates</th>
+        <th width="60%">Works being done</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <b>Aydenpol - Ashford</b>
+        </td>
+        <td>
+          <p>18/10/2025 - 08/11/2025</p>
+        </td>
+        <td>
+          <p>Track duplication and signalling upgrades</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Tallentyne (swap from Suburban services) - Bodmin</b>
+        </td>
+        <td>
+          <p>10/11/2025 - 24/11/2025</p>
+        </td>
+        <td>
+          <p>Level crossing removal, trackworks and signalling upgrades</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Stroud - Harold Point</b>
+        </td>
+        <td>
+          <p>15/12/2025 - 05/01/2026 ⏾</p>
+        </td>
+        <td>
+          <p>Signalling upgrades and station accessability improvements</p>
+        </td>
+      </tr>                
+    </tbody>
+  </table>
+</div>
+</div>
+
+<div>
+<h3>Queensborough & Kurrick Lines</h3>
+<div class="nsw-table nsw-table--striped" tabindex="0">
+  <table>
+    <thead>
+      <tr>
+        <th width="20%">Affected areas</th>
+        <th width="20%">Dates</th>
+        <th width="60%">Works being done</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <b>Aydenpol - Kurrick</b>
+        </td>
+        <td>
+          <p>18/10/2025 - 08/11/2025</p>
+        </td>
+        <td>
+          <p>Track duplication and signalling upgrades</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Weston Ponds - Marrenville (Train services to still run as express via The Shorelander)</b>
+        </td>
+        <td>
+          <p>10/11/2025 - 24/11/2025</p>
+        </td>
+        <td>
+          <p>Trackworks and signalling upgrades</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b>Swindon - Queensborough</b>
+        </td>
+        <td>
+          <p>15/12/2025 - 05/01/2026 ⏾</p>
+        </td>
+        <td>
+          <p>Trackworks, signalling upgrades, station accessability and StateLink improvements</p>
+        </td>
+      </tr>                
+    </tbody>
+  </table>
+</div>
 </div>
 
 </div>
