--- a/news-and-publications/projects/RER.html
+++ b/news-and-publications/projects/RER.html
@@ -327,6 +327,7 @@ replace some locomotive hauled services, during testing periods, coaches will re
 </div>
 
 <div>
+<p>&nbsp;</p>  
 <div class="nsw-table nsw-table--striped" tabindex="0">
 <h3>Flinders Bay & Broadshore Lines</h3>  
   <table>
@@ -377,6 +378,7 @@ replace some locomotive hauled services, during testing periods, coaches will re
 </div>
 
 <div>
+ <p>&nbsp;</p>   
 <div class="nsw-table nsw-table--striped" tabindex="0">
 <h3>Harold Point & Ashford Lines</h3>  
   <table>
@@ -428,6 +430,7 @@ replace some locomotive hauled services, during testing periods, coaches will re
 
 <div>
 <div class="nsw-table nsw-table--striped" tabindex="0">
+  <p>&nbsp;</p>  
 <h3>Queensborough & Kurrick Lines</h3>  
   <table>
     <thead>
