Twitter link fixes & Bus disruption page changes

--- a/pt/trains/disruptions/aynsdale.html
+++ b/pt/trains/disruptions/aynsdale.html
@@ -248,7 +248,7 @@
  <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Transnet is officially moving to the new Public Transport for Thornsbury website from January 1st, 2026</div>
+        <div class="nsw-global-alert__title">Transnet is officially moving to the new Transnet website from January 1st, 2026</div>
       </div>
 <div class="nsw-block">
   <button class="nsw-button nsw-button--dark js-open-dialog-single-cta" aria-haspopup="dialog">Click/tap for more info</button>
@@ -416,7 +416,7 @@
         <li><a href="/disclaimer">Disclaimer</a></li>
       </ul>
       <div class="nsw-footer__social">
-        <a class="nsw-icon-button" href="https://x.com/PTfT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
+        <a class="nsw-icon-button" href="https://x.com/TransnetPT_" target="_blank" rel="noopener" aria-label="X (formerly Twitter)">
           <svg role="img" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>X (formerly Twitter)</title>
             <path d="M18.6348 13.5498L30.2914 0H27.5292L17.4078 11.7651L9.32385 0H0L12.2245 17.7909L0 32H2.76239L13.4508 19.5756L21.9881 32H31.3119L18.6342 13.5498H18.6348ZM14.8514 17.9477L13.6128 16.1761L3.75772 2.07949H8.00059L15.9537 13.4559L17.1923 15.2275L27.5305 30.0151H23.2876L14.8514 17.9484V17.9477Z" fill="white"/>
@@ -426,7 +426,7 @@
       </div>
       </div>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © 2025 - Public Transport for Thornsbury is an umbrella agency for the Department of Transport & Agriculture</div>
+        <div class="nsw-footer__copyright">Copyright © 2025 - Transnet is an umbrella agency for the Department of Transport & Agriculture</div>
         <div class="nsw-footer__built"><img src="/img/TBGL.svg" alt="Thornsbury Government Logo" style="height: 100%;"></div>
       </div>
     </div>
