--- a/pt/buses/disruptions.html
+++ b/pt/buses/disruptions.html
@@ -342,193 +342,64 @@
   </div>
 </div>
 
-
-<!-- McKian's -->
+<div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-accordion js-accordion">
 
-  <div class="nsw-accordion__title">Operated by McKian's</div>
+  <div class="nsw-accordion__title">Buses operated by Lotus Transnet</div>
   <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
+
+<div class="nsw-disruption-grid">
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
+    <div class="nsw-disruption-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 250</p>
-          <p class="nsw-small">City East</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 255</p>
-          <p class="nsw-small">City North</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 280 (until October 1st, 2025)</p>
-          <p class="nsw-small">City</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 524</p>
-          <p class="nsw-small">Swanhaven Station - Kelmscott Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 525</p>
-          <p class="nsw-small">Bradfield Station - Warraloo Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 610</p>
-          <p class="nsw-small">Kelmscott Station - Bradfield Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
-
-    <div class="nsw-disruption-grid">
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 612</p>
-          <p class="nsw-small">Rhyecote - Glenbourne Station</p>
+          <p>Route 401</p>
+          <p class="nsw-small">Walbrick Park Station - Narrumnarrum Station</p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
+    <div class="nsw-disruption-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 616</p>
-          <p class="nsw-small">Warraloo Station - Hallfern Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 706</p>
-          <p class="nsw-small">Fremantle Station - Shipton Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 901</p>
-          <p class="nsw-small">Fremantle Station - Wyiramatta Station via Bradfield Stn & Shipton</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 902</p>
-          <p class="nsw-small">Lakeswood Station - Fremantle Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 903</p>
-          <p class="nsw-small">Ferncliffe Station - Concord Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
-
-  </div>
-</div>
-
-<!-- O'Connors -->
-<div class="nsw-accordion js-accordion">
-
-  <div class="nsw-accordion__title">Operated by O'Connors</div>
-  <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
           <p>Route 405</p>
+          <p class="nsw-small">Swancliffe Station - Dyrehall Station (via Avandale)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 410</p>
+          <p class="nsw-small">Princess Creek Station - Bradfield Station (via Warraloo)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 414</p>
           <p class="nsw-small">Avandale Circular</p>
         </div>
       </div>
@@ -536,249 +407,49 @@
   </div>
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
+    <div class="nsw-disruption-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 510</p>
-          <p class="nsw-small">Esplande Street  Station - Wattle Park Station</p>
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 420</p>
+          <p class="nsw-small">Narrumnarrum Station - Margate</p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
+    <div class="nsw-disruption-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 903</p>
-          <p class="nsw-small">Ferncliffe Station - Concord Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
 </div>
-
-  </div>
-</div>
-
-<!-- Whitfords -->
- <div class="nsw-accordion js-accordion">
-
-  <div class="nsw-accordion__title">Operated by Whitfords</div>
-  <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
-
-     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 881</p>
-          <p class="nsw-small">Lakeswood Circular</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-       <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 883</p>
-          <p class="nsw-small">Lakeswood Station - Collershire Station via Wirrinyong</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  
-</div>
-
-  </div>
-</div>
-
-<!-- CDC Thornsbury -->
- <div class="nsw-accordion js-accordion">
-
-  <div class="nsw-accordion__title">Operated by CDC Thornsbury</div>
-  <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 104</p>
-          <p class="nsw-small">Merlynn Circular</p>
+          <p>Route 425</p>
+          <p class="nsw-small">Marrenville Station - Coalvile (Circular)</p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
+    <div class="nsw-disruption-card">
       <div class="nsw-card__content">
         <div class="nsw-card__title">
           <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 128</p>
-          <p class="nsw-small">Victoria Station - Haysbridge Station</p>
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 435</p>
+          <p class="nsw-small">Swanhaven Station - Kelmscott Station</p>
         </div>
       </div>
     </div>
   </div>
 
 </div>
-
-  </div>
 </div>
-
-<!-- Connect Bus Lines (until September 1st) -->
-<div class="nsw-accordion js-accordion">
-
-  <div class="nsw-accordion__title">Operated by Connect Bus Lines (until September 1st)</div>
-  <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 570</p>
-          <p class="nsw-small">Rhyecote - Wyiramatta Station via Runcorn</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 575</p>
-          <p class="nsw-small">Wyiramatta Station - Castleford</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 590</p>
-          <p class="nsw-small">Jundabyne Station - Merri Hill Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-  </div>
-</div>
-
-<!-- Minister Bus Co (from September 1st) -->
-<div class="nsw-accordion js-accordion">
-
-  <div class="nsw-accordion__title">Operated by Minister Bus Co. (from September 1st)</div>
-  <div class="nsw-accordion__content">
-    <div class="nsw-disruption-grid">
-
-     <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 1</p>
-          <p class="nsw-small">Aldershot Circular</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-      <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 14</p>
-          <p class="nsw-small">Aldershot Station - Theeton Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-      <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 19</p>
-          <p class="nsw-small">Theeton Station - Broadshore Station via Broadshore Spa</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 570</p>
-          <p class="nsw-small">Rhyecote - Wyiramatta Station via Runcorn</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 575</p>
-          <p class="nsw-small">Wyiramatta Station - Castleford</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-disruption-card">
-      <div class="nsw-card__content">
-        <div class="nsw-card__title">
-          <div class="nsw-list nsw-list--8">
-          <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
-          <p>Route 590</p>
-          <p class="nsw-small">Jundabyne Station - Merri Hill Station</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
 </div>
 
   </div>
