--- a/pt/buses/disruptions.html
+++ b/pt/buses/disruptions.html
@@ -274,7 +274,7 @@
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-accordion js-accordion">
 
-  <div class="nsw-accordion__title">Buses operated by Lotus Transnet</div>
+  <div class="nsw-accordion__title">Buses operated by Lotus Transit</div>
   <div class="nsw-accordion__content">
 
 <div class="nsw-disruption-grid">
