--- a/pt/buses/disruptions.html
+++ b/pt/buses/disruptions.html
@@ -384,6 +384,76 @@
   </div>
 </div>  
 
+<div class="nsw-m-right-md nsw-m-left-md">
+<div class="nsw-accordion js-accordion">
+
+  <div class="nsw-accordion__title">Buses operated by Minister Bus Co.</div>
+  <div class="nsw-accordion__content">
+
+<div class="nsw-disruption-grid">
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 710</p>
+          <p class="nsw-small">Wiyramatta Station - Murrinong Station (via Wynora)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 711</p>
+          <p class="nsw-small">Wiyramatta Station - Castleford</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 750</p>
+          <p class="nsw-small">Murrinong Station - Aynsdale Station (via Rhyecote)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 753</p>
+          <p class="nsw-small">Merri Hill Station - Kelmscott Station (via Clydeton & Bradfield)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
+</div>
+
+  </div>
+</div>  
 
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
