--- a/pt/buses/disruptions.html
+++ b/pt/buses/disruptions.html
@@ -271,6 +271,7 @@
   </div>
 </div>
 
+<!-- LOTUS TRANSIT -->
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-accordion js-accordion">
 
@@ -278,6 +279,47 @@
   <div class="nsw-accordion__content">
 
 <div class="nsw-disruption-grid">
+  <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 201</p>
+          <p class="nsw-small">Thornsbury Station - Kyama Beachfront (via Aydenpol & Newmarket)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 205</p>
+          <p class="nsw-small">Thornsbury Station - Bradfield Station (via Showgrounds & Wynchep)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 208</p>
+          <p class="nsw-small">Thornsbury Station - Concord Station (via Town Hall)</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
     <div class="nsw-disruption-card">
@@ -377,6 +419,48 @@
     </div>
   </div>
 
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 601</p>
+          <p class="nsw-small">Kelmscott Station - Kyama Station</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 602</p>
+          <p class="nsw-small">Warrendayle Station - Kyama Station (via Aitkenvale)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-disruption-card">
+      <div class="nsw-card__content">
+        <div class="nsw-card__title">
+          <div class="nsw-list nsw-list--8">
+    <span class="nsw-disruption-label nsw-disruption-label--good" style="border-radius: 100%;"></span><p class="nsw-small">Operational</p>
+</div>
+          <p>Route 605</p>
+          <p class="nsw-small">Newmarket Station - Ferncliffe Station (via Airport)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 </div>
 </div>
@@ -384,6 +468,7 @@
   </div>
 </div>  
 
+<!-- MINISTER BUS CO -->
 <div class="nsw-m-right-md nsw-m-left-md">
 <div class="nsw-accordion js-accordion">
 
